--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 12
-      - run: yarn --frozen-lockfile
+      - run: yarn
       - run: node ./script/build-current-platform.js
       - uses: actions/upload-artifact@v2
         with:
